--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,7 @@ canvas {
   background-color: #000;
 }
 
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -42,6 +43,10 @@ h1 {
 }
 
 #app {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
