--- a/src/style.css
+++ b/src/style.css
@@ -16,7 +16,10 @@
 
 .legend {
   width: 100%;
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+
   text-align: left;
 
   gap: 1.5rem;
@@ -40,8 +43,14 @@
   padding: 0;
 }
 
+label {
+  user-select: none;
+}
+
 .controls {
   display: flex;
+
+  width: 100%;
 
   text-align: left;
 
@@ -79,10 +88,10 @@ h1 {
 
 #app {
   display: flex;
-  /* flex-direction: column; */
-  gap: 20px;
+  gap: 30px;
 
-  max-width: 1280px;
+
+  width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
